see #21510 - fixup, forgot to delete one part (patch didn't apply nicely)
git-svn-id: https://josm.openstreetmap.de/svn/trunk@18309 0c6e7542-c601-0410-84e7-c038aed88b3b